# cs2-schema-parser

./: .gitignore  LICENSE  pyproject.toml  readme.md
schema_parser/: __init__.py  cli.py  ctypes_map.py  hpp_gen.py  schema_parser.py  utils.py
